--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -84,6 +84,10 @@ body {
   width: 100%;
   height: 100%;
   text-align: center;
+  iframe {
+    display: block;
+    margin: auto;
+  }
 }
 
 .db-absolute {
