--- a/muro/static/css/main.css
+++ b/muro/static/css/main.css
@@ -112,6 +112,9 @@ body {
   width: 100%;
   height: 100%;
   text-align: center; }
+  .db-brick-embed iframe {
+    display: block;
+    margin: auto; }
 
 .db-absolute {
   position: absolute;
